--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -25,11 +25,8 @@ dist.dir=dist
 dist.ear.war=${dist.dir}/${war.ear.name}
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
+endorsed.classpath=
 excludes=
-file.reference.htmlcompressor-1.5.3.jar=C:\\Users\\Pandu\\Downloads\\htmlcompressor-1.5.3.jar
-file.reference.jakarta.servlet.jsp.jstl-3.0.0.jar=E:\\java\\BelajarJavaWeb\\lib\\jakarta.servlet.jsp.jstl-3.0.0.jar
-file.reference.jakarta.servlet.jsp.jstl-api-3.0.2.jar=E:\\java\\BelajarJavaWeb\\lib\\jakarta.servlet.jsp.jstl-api-3.0.2.jar
-file.reference.mysql-connector-j-9.2.0.jar=E:\\java\\JavaMVC1\\lib\\mysql-connector-j-9.2.0.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -39,10 +36,7 @@ j2ee.platform.classpath=${j2ee.server.home}/bin/tomcat-juli.jar:${j2ee.server.ho
 j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
-    ${file.reference.jakarta.servlet.jsp.jstl-3.0.0.jar}:\
-    ${file.reference.jakarta.servlet.jsp.jstl-api-3.0.2.jar}:\
-    ${file.reference.mysql-connector-j-9.2.0.jar}:\
-    ${file.reference.htmlcompressor-1.5.3.jar}
+    ${libs.CopyLibs.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -69,7 +63,6 @@ javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
-no.dependencies=false
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
 resource.dir=setup
