feat(source): add logic for registration and setup auth context

--- a/lib/nblibraries.properties
+++ b/lib/nblibraries.properties
@@ -2,6 +2,7 @@ libs.CopyLibs.classpath=\
     ${base}/CopyLibs/org-netbeans-modules-java-j2seproject-copylibstask.jar:\
     ${base}/CopyLibs/jakarta.servlet.jsp.jstl-3.0.0.jar:\
     ${base}/CopyLibs/jakarta.servlet.jsp.jstl-api-3.0.2.jar:\
-    ${base}/CopyLibs/mysql-connector-j-9.2.0.jar
+    ${base}/CopyLibs/mysql-connector-j-9.2.0.jar:\
+    ${base}/CopyLibs/jbcrypt-0.4.jar:\
 libs.CopyLibs.displayName=CopyLibs Task
 libs.CopyLibs.prop-version=3.0
