--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -12,6 +12,14 @@
         <servlet-name>PaymentController</servlet-name>
         <servlet-class>com.evotick.controller.user.PaymentController</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>EventController</servlet-name>
+        <servlet-class>com.evotick.controller.user.EventController</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>EventDetailController</servlet-name>
+        <servlet-class>com.evotick.controller.user.EventDetailController</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>RegisterController</servlet-name>
         <url-pattern>/register</url-pattern>
@@ -27,6 +35,14 @@
     <servlet-mapping>
         <servlet-name>PaymentController</servlet-name>
         <url-pattern>/user/payment</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>EventController</servlet-name>
+        <url-pattern>/event</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>EventDetailController</servlet-name>
+        <url-pattern>/event/detail</url-pattern>
     </servlet-mapping>
     <welcome-file-list>
         <welcome-file>index.jsp</welcome-file>
@@ -47,6 +63,18 @@
         <filter-name>AdminProvider</filter-name>
         <filter-class>com.evotick.provider.AdminProvider</filter-class>
     </filter>
+    <filter>
+        <filter-name>GuestProvider</filter-name>
+        <filter-class>com.evotick.provider.GuestProvider</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>GuestProvider</filter-name>
+        <servlet-name>LoginController</servlet-name>
+        <servlet-name>RegisterController</servlet-name>
+        <dispatcher>REQUEST</dispatcher>
+        <dispatcher>FORWARD</dispatcher>
+        <dispatcher>INCLUDE</dispatcher>
+    </filter-mapping>
     <filter-mapping>
         <filter-name>AdminProvider</filter-name>
         <url-pattern>/admin*</url-pattern>
@@ -63,7 +91,7 @@
     </filter-mapping>
     <filter-mapping>
         <filter-name>UserProvider</filter-name>
-        <url-pattern>/user*</url-pattern>
+        <url-pattern>/user/*</url-pattern>
         <dispatcher>REQUEST</dispatcher>
         <dispatcher>FORWARD</dispatcher>
         <dispatcher>INCLUDE</dispatcher>
