--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -32,6 +32,14 @@
         <servlet-name>SportController</servlet-name>
         <servlet-class>com.evotick.controller.user.SportController</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>HistoryController</servlet-name>
+        <servlet-class>com.evotick.controller.user.HistoryController</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>TicketController</servlet-name>
+        <servlet-class>com.evotick.controller.user.TicketController</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>RegisterController</servlet-name>
         <url-pattern>/register</url-pattern>
@@ -67,6 +75,14 @@
     <servlet-mapping>
         <servlet-name>SportController</servlet-name>
         <url-pattern>/sport</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>HistoryController</servlet-name>
+        <url-pattern>/user/history</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>TicketController</servlet-name>
+        <url-pattern>/ticket</url-pattern>
     </servlet-mapping>
     <welcome-file-list>
         <welcome-file>index.jsp</welcome-file>
