--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -82,7 +82,7 @@
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>EventAdminController</servlet-name>
-        <url-pattern>/dashboard/event</url-pattern>
+        <url-pattern>/admin-event</url-pattern>
     </servlet-mapping>
     <welcome-file-list>
         <welcome-file>index.jsp</welcome-file>
